Fix sort icon alignment issues on certain browsers
Sort icons were too tall on Chrome for Android.

--- a/srcjs/reactable.css
+++ b/srcjs/reactable.css
@@ -273,10 +273,12 @@
 
 .rt-th[aria-sort] .-sort-left:after {
   padding-right: 5px;
+  line-height: 0;
 }
 
 .rt-th[aria-sort] .-sort-right:after {
   padding-left: 5px;
+  line-height: 0;
 }
 
 .rt-th[aria-sort='ascending'] .-sort-left:after,
